<resources>
    <string name="app_name">Loan Calculator</string>
    <string name="years">Term of Loan (Years)</string>
    <string name="rate">Yearly Interest Rate</string>
    <string name="amount">Loan Amount</string>
    <string name="month">Monthly Payment</string>
    <string name="totalpayment">Total Payment</string>
    <string name="totalinterest">Total Interest</string>
    <string name="button1">Calculate</string>
    <string name="button2">Clear</string>
    <string name="header">Result</string>
</resources>
